[package]
name = "jtag-taps"
version = "0.6.0"
edition = "2021"
description = "Library for interacting with individual TAPs on a JTAG scan chain"
license = "MIT"
repository = "https://github.com/srwalter/jtag-taps"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libftd2xx = "0.32"
ftdi-mpsse = "0.1"
rusb = "0.9.3"
